force-app/main/featurePartner/schema/objects/Partner__c/Partner__c.object-meta.xml
<CustomObject>
    <label>Partner</label>
    <nameField>
        <label>Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>