force-app/main/featurePartner/schema/objects/Partner__c/fields/Primary_Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Partner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partners</relationshipLabel>
    <relationshipName>Partners</relationshipName>
    <type>Lookup</type>
</CustomField>