force-app/main/featurePartner/schema/objects/Partner__c/validationRules/x01_Correct_Score.validationRule-meta.xml
<ValidationRule>
    <fullName>x01_Correct_Score</fullName>
    <active>true</active>
    <description>The result cannot be a negative number or greater than 100. Score Error x01.</description>
    <errorConditionFormula>Score__c &gt; 100 ||  Score__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Score__c</errorDisplayField>
    <errorMessage>The result cannot be a negative number or greater than 100. Score Error x01.</errorMessage>
</ValidationRule>